# rethink-c

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  index.html
app/: CMakeLists.txt  deflate.c  inflate.c
doc/: Doxyfile  ac_8c.html  ac_8h.html  ac_8h_source.html  annotated.html  arraylist_8c.html  arraylist_8h.html  arraylist_8h_source.html  avltree_8c.html  avltree_8h.html  avltree_8h_source.html  bignum_8c.html  bignum_8h.html  bignum_8h_source.html  bitmap_8h_source.html  bm_8c.html  bm_8h.html  bm_8h_source.html  bstree_8c.html  bstree_8h.html  bstree_8h_source.html  classes.html  compare_8c.html  compare_8h.html  compare_8h_source.html  def_8h.html  def_8h_source.html  dijkstra_8c.html  dijkstra_8h.html  dijkstra_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  distance_8h.html  distance_8h_source.html  dup_8c.html  dup_8h.html  dup_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  (+115 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_8.js  files_9.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+33 more)
src/: CMakeLists.txt  ac.c  ac.h  arraylist.c  arraylist.h  avltree.c  avltree.h  bignum.c  bignum.h  bitmap.c  bitmap.h  bm.c  bm.h  bstree.c  bstree.h  compare.c  compare.h  def.h  dijkstra.c  dijkstra.h  distance.c  distance.h  dup.c  dup.h  error.h  graph.c  graph.h  hash.c  hash.h  hash_table.c  hash_table.h  heap.c  heap.h  huffman.c  huffman.h  kmp.c  kmp.h  list.c  list.h  matrix.c  (+19 more)
test/: CMakeLists.txt  alloc-testing.c  alloc-testing.h  test_ac.c  test_arraylist.c  test_avltree.c  test_bignum.c  test_bitmap.c  test_bm.c  test_bstree.c  test_dijkstra.c  test_distance.c  test_graph.c  test_hash_table.c  test_heap.c  test_helper.c  test_helper.h  test_huffman.c  test_kmp.c  test_list.c  test_matrix.c  test_prime.c  test_queue.c  test_rbtree.c  test_skip_list.c  test_sunday.c  test_text.c  test_trie.c  test_vector.c  testmain.c
